--- a/Utilities/Base.lproj/Main.storyboard
+++ b/Utilities/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Bxs-ba-Ptb">
-                                <rect key="frame" x="0.0" y="17" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="17" width="414" height="862.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="133-fx-ab5">
-                                        <rect key="frame" x="139.5" y="0.0" width="135" height="208"/>
+                                        <rect key="frame" x="139.5" y="0.0" width="135" height="164.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <state key="normal" title="Prompt for String"/>
                                         <connections>
@@ -29,7 +29,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="8vW-h1-zjr">
-                                        <rect key="frame" x="155.5" y="218" width="103" height="208"/>
+                                        <rect key="frame" x="155.5" y="174.5" width="103" height="164.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <state key="normal" title="Resize Image"/>
@@ -38,7 +38,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="bLY-tk-44p">
-                                        <rect key="frame" x="109.5" y="436" width="195" height="208"/>
+                                        <rect key="frame" x="109.5" y="349" width="195" height="164"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <state key="normal" title="Full Screen Image Viewer"/>
@@ -47,12 +47,21 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="jB0-JC-eZJ">
-                                        <rect key="frame" x="141.5" y="654" width="131" height="208"/>
+                                        <rect key="frame" x="141.5" y="523" width="131" height="164.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <state key="normal" title="Gradient Overlay"/>
                                         <connections>
                                             <action selector="testHorizontalGradientOverlayWithId:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cxz-pG-4hY"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="0R7-ar-QmC">
+                                        <rect key="frame" x="157" y="697.5" width="100" height="164.5"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                        <state key="normal" title="Text Capture"/>
+                                        <connections>
+                                            <action selector="testTextCaptureWithId:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xjh-2G-dlG"/>
                                         </connections>
                                     </button>
                                 </subviews>
